# streamlit-ui

./: .gitignore  README.md  agent.py  component_strategies.py  logging_config.py  main.py  models.py  pyproject.toml  repositories.py  tools.py  ui.py  ui_models.py  ui_tools.py
app/: main.py
app/src/: agent.py  app.py  async_utils.py  component_strategies.py  config.py  logging_config.py  mcp_client.py  models.py  repositories.py  tool_manager.py  tool_models.py  tools.py  ui.py  ui_models.py  ui_tools.py
assets/: demo.webm
