[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.80.0",
    "mcp>=1.22.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "streamlit>=1.51.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
]
